exports[`Button  "a" matches snapshots 1`] = `
<a
  className="button"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`Button  "button" matches snapshot 1`] = `
<button
  className="button"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`Button  disabled matches snapshots 1`] = `
<a
  className="button"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonCTA  "a" matches snapshots 1`] = `
<a
  className="button button--cta"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonCTA  "button" matches snapshot 1`] = `
<button
  className="button button--cta"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonCTA  disabled matches snapshots 1`] = `
<a
  className="button button--cta"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonFull  "a" matches snapshots 1`] = `
<a
  className="button button--full"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonFull  "button" matches snapshot 1`] = `
<button
  className="button button--full"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonFull  disabled matches snapshots 1`] = `
<a
  className="button button--full"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonStatic  "a" matches snapshots 1`] = `
<a
  className="button button--static"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonStatic  "button" matches snapshot 1`] = `
<button
  className="button button--static"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonStatic  disabled matches snapshots 1`] = `
<a
  className="button button--static"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;
